err/cassandralauncher.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/boto'...
Listing './lib/python3.5/site-packages/boto/awslambda'...
Listing './lib/python3.5/site-packages/boto/beanstalk'...
Listing './lib/python3.5/site-packages/boto/cacerts'...
Listing './lib/python3.5/site-packages/boto/cloudformation'...
Listing './lib/python3.5/site-packages/boto/cloudfront'...
Listing './lib/python3.5/site-packages/boto/cloudhsm'...
Listing './lib/python3.5/site-packages/boto/cloudsearch'...
Listing './lib/python3.5/site-packages/boto/cloudsearch2'...
Listing './lib/python3.5/site-packages/boto/cloudsearchdomain'...
Listing './lib/python3.5/site-packages/boto/cloudtrail'...
Listing './lib/python3.5/site-packages/boto/codedeploy'...
Listing './lib/python3.5/site-packages/boto/cognito'...
Listing './lib/python3.5/site-packages/boto/cognito/identity'...
Listing './lib/python3.5/site-packages/boto/cognito/sync'...
Listing './lib/python3.5/site-packages/boto/configservice'...
Listing './lib/python3.5/site-packages/boto/contrib'...
Listing './lib/python3.5/site-packages/boto/datapipeline'...
Listing './lib/python3.5/site-packages/boto/directconnect'...
Listing './lib/python3.5/site-packages/boto/dynamodb'...
Listing './lib/python3.5/site-packages/boto/dynamodb2'...
Listing './lib/python3.5/site-packages/boto/ec2'...
Listing './lib/python3.5/site-packages/boto/ec2/autoscale'...
Listing './lib/python3.5/site-packages/boto/ec2/cloudwatch'...
Listing './lib/python3.5/site-packages/boto/ec2/elb'...
Listing './lib/python3.5/site-packages/boto/ec2containerservice'...
Listing './lib/python3.5/site-packages/boto/ecs'...
Listing './lib/python3.5/site-packages/boto/elasticache'...
Listing './lib/python3.5/site-packages/boto/elastictranscoder'...
Listing './lib/python3.5/site-packages/boto/emr'...
Listing './lib/python3.5/site-packages/boto/file'...
Listing './lib/python3.5/site-packages/boto/fps'...
Listing './lib/python3.5/site-packages/boto/glacier'...
Listing './lib/python3.5/site-packages/boto/gs'...
Listing './lib/python3.5/site-packages/boto/iam'...
Listing './lib/python3.5/site-packages/boto/kinesis'...
Listing './lib/python3.5/site-packages/boto/kms'...
Listing './lib/python3.5/site-packages/boto/logs'...
Listing './lib/python3.5/site-packages/boto/machinelearning'...
Listing './lib/python3.5/site-packages/boto/manage'...
Listing './lib/python3.5/site-packages/boto/mashups'...
Listing './lib/python3.5/site-packages/boto/mturk'...
Listing './lib/python3.5/site-packages/boto/mws'...
Listing './lib/python3.5/site-packages/boto/opsworks'...
Listing './lib/python3.5/site-packages/boto/pyami'...
Listing './lib/python3.5/site-packages/boto/pyami/installers'...
Listing './lib/python3.5/site-packages/boto/pyami/installers/ubuntu'...
Listing './lib/python3.5/site-packages/boto/rds'...
Listing './lib/python3.5/site-packages/boto/rds2'...
Listing './lib/python3.5/site-packages/boto/redshift'...
Listing './lib/python3.5/site-packages/boto/roboto'...
Listing './lib/python3.5/site-packages/boto/route53'...
Listing './lib/python3.5/site-packages/boto/route53/domains'...
Listing './lib/python3.5/site-packages/boto/s3'...
Listing './lib/python3.5/site-packages/boto/sdb'...
Listing './lib/python3.5/site-packages/boto/sdb/db'...
Listing './lib/python3.5/site-packages/boto/sdb/db/manager'...
Listing './lib/python3.5/site-packages/boto/services'...
Listing './lib/python3.5/site-packages/boto/ses'...
Listing './lib/python3.5/site-packages/boto/sns'...
Listing './lib/python3.5/site-packages/boto/sqs'...
Listing './lib/python3.5/site-packages/boto/sts'...
Listing './lib/python3.5/site-packages/boto/support'...
Listing './lib/python3.5/site-packages/boto/swf'...
Listing './lib/python3.5/site-packages/boto/vendored'...
Listing './lib/python3.5/site-packages/boto/vendored/regions'...
Listing './lib/python3.5/site-packages/boto/vpc'...
Listing './lib/python3.5/site-packages/boto-2.48.0.dist-info'...
Listing './lib/python3.5/site-packages/cassandralauncher'...
Compiling './lib/python3.5/site-packages/cassandralauncher/cassandralauncher.py'...
***   File "./lib/python3.5/site-packages/cassandralauncher/cassandralauncher.py", line 203
    print prompt,
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cassandralauncher/clusterlauncher.py'...
***   File "./lib/python3.5/site-packages/cassandralauncher/clusterlauncher.py", line 157
    print '{0}{1} -i {2} {3}@{4}'.format(config.get('System', 'ssh'), low_security_args, pem_file, user, publicIP)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cassandralauncher/common.py'...
***   File "./lib/python3.5/site-packages/cassandralauncher/common.py", line 88
    print '{0} {1}@{2}'.format(config.get('System', 'ssh'), user, publicIP)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cassandralauncher/ec2.py'...
***   File "./lib/python3.5/site-packages/cassandralauncher/ec2.py", line 85
    print 'Starting an EC2 cluster of type {0} with image {1}...'.format(instance_type, image)
                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cassandralauncher/rax.py'...
***   File "./lib/python3.5/site-packages/cassandralauncher/rax.py", line 22
    print 'Starting a Rackspace cluster of flavor {0} with image {1}...'.format(flavor, image)
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudservers'...
Compiling './lib/python3.5/site-packages/cloudservers/client.py'...
***   File "./lib/python3.5/site-packages/cloudservers/client.py", line 63
    except exceptions.Unauthorized, ex:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudservers/shell.py'...
***   File "./lib/python3.5/site-packages/cloudservers/shell.py", line 232
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/python_cloudservers-1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
